--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@chakra-ui/charts": "^3.16.0",
-    "@chakra-ui/react": "^3.16.0",
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.14.0",
     "@tailwindcss/vite": "^4.1.4",
     "next-themes": "^0.4.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.3.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "recharts": "^2.15.2",
