--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@tailwindcss/vite": "^4.1.4",
+    "framer-motion": "^12.7.3",
     "next-themes": "^0.4.6",
     "react": "^18.3.0",
     "react-dom": "^18.2.0",
