--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@chakra-ui/charts": "^3.16.0",
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/pin-input": "^2.1.0",
     "@chakra-ui/react": "^3.16.0",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@tailwindcss/vite": "^4.1.4",
+    "framer-motion": "^6.5.1",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
