--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@chakra-ui/charts": "^3.16.0",
     "@chakra-ui/react": "^3.16.0",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@tailwindcss/vite": "^4.1.4",
+    "framer-motion": "^12.7.3",
+    "lucide-react": "^0.488.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
